# kavalkade

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  woip.py
src/: woip.py
src/kavalkade/: __init__.py
src/kavalkade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kavalkade/assets/: __init__.py
src/kavalkade/controllers/: __init__.py  assets.py  base.py  main.py  profile.py
src/kavalkade/routes/: __init__.py
src/kavalkade/templates/: layout.pt
src/kavalkade/views/: __init__.py
src/kavalkade/views/templates/: layout.pt  menu.pt
ui-test/: index.html  style.css
